--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,17 @@ body {
 h1 {
     text-align: center;
     color: cornflowerblue;
+    
 }
+.projects {
+    display:flex;
+    flex-wrap:wrap;
+}
+    .project {
+    width: 30%;
+    margin: 10px;
+    padding: 20px 10px;
+    background: white; /* pick a color */  
+    border-radius: 25%;
+        }
+            
