--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,14 @@ h1 {
     width: 30%;
     margin: 10px;
     padding: 20px 10px;
-    background: white; /* pick a color */  
+    background: rgb(133, 21, 15); /* pick a color */  
     border-radius: 25%;
         }
-        .project img{
-            width: 300px;
-            height: 300px;
-            margin: 10px;
-            border: 2px solid rgb(126, 14, 201); /* choose a color */
-            display: block;
-            margin: auto;
-            }
+    .project img{
+        width: 300px;
+        height: 300px;
+        margin: 10px;
+        border: 2px solid rgb(19, 200, 213); 
+        display: block;
+        margin: auto;
+        }
